tests/errors/double-define.spcasmtest
org 0

here:
	nop
here:
	bra here
